After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777297 - disabling search should switch to previous view
disabling search should switch to previous view
Status: RESOLVED FIXED
Product: recipes
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Recipes maintainer(s)
Recipes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-01-16 05:25 UTC by Mohammed Sadiq
Modified: 2017-01-16 21:19 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mohammed Sadiq 2017-01-16 05:25:34 UTC
When the active search is canceled, a blank page is shown. It would be nice if Recipes/Cuisines page (which ever was the previously opened one) is shown.

How to reproduce:

1. Open recipes
2. Click on search button -> Search for something (say: 'a')
3. Now stop search by clicking the search button again.

Result:
A blank page is shown
Comment 1 Matthias Clasen 2017-01-16 13:51:24 UTC
I agree, clicking the toggle button again should go back to the recipes page. We already do that if you stop the search with Esc