Avoid ending up on an empty page

When a search is stopped by toggling the search button, we should
go back to where we came from, like we already do when search is
stopped with Esc.

https://bugzilla.gnome.org/show_bug.cgi?id=777297